SDKs/googleapis.com/androidpublisher/v1/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()
    
    req := operations.AndroidpublisherPurchasesCancelRequest{
        Security: operations.AndroidpublisherPurchasesCancelSecurity{
            Oauth2: shared.SchemeOauth2{
                Authorization: "Bearer YOUR_ACCESS_TOKEN_HERE",
            }
            Oauth2c: shared.SchemeOauth2c{
                Authorization: "Bearer YOUR_ACCESS_TOKEN_HERE",
            },
        },
        PathParams: operations.AndroidpublisherPurchasesCancelPathParams{
            PackageName: "a",
            SubscriptionID: "sint",
            Token: "velit",
        },
        QueryParams: operations.AndroidpublisherPurchasesCancelQueryParams{
            Alt: "json",
            Fields: "incidunt",
            Key: "reiciendis",
            OauthToken: "velit",
            PrettyPrint: true,
            QuotaUser: "in",
            UserIP: "quas",
        },
    }
    
    res, err := s.Purchases.AndroidpublisherPurchasesCancel(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.StatusCode == http.StatusOK {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### purchases

* `AndroidpublisherPurchasesCancel` - Cancels a user's subscription purchase. The subscription remains valid until its expiration time.
* `AndroidpublisherPurchasesGet` - Checks whether a user's subscription purchase is valid and returns its expiry time.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
