SDKs/googleapis.com/androidpublisher/v1.1/go/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

```bash
go get openapi
```
<!-- End SDK Installation -->

<!-- Start SDK Example Usage -->
## SDK Example Usage

```go
package main

import (
    "openapi"
    "openapi/pkg/models/shared"
    "openapi/pkg/models/operations"
)

func main() {
    s := sdk.New()
    
    req := operations.AndroidpublisherInapppurchasesGetRequest{
        Security: operations.AndroidpublisherInapppurchasesGetSecurity{
            Oauth2: shared.SchemeOauth2{
                Authorization: "Bearer YOUR_ACCESS_TOKEN_HERE",
            }
            Oauth2c: shared.SchemeOauth2c{
                Authorization: "Bearer YOUR_ACCESS_TOKEN_HERE",
            },
        },
        PathParams: operations.AndroidpublisherInapppurchasesGetPathParams{
            PackageName: "omnis",
            ProductID: "enim",
            Token: "aspernatur",
        },
        QueryParams: operations.AndroidpublisherInapppurchasesGetQueryParams{
            Alt: "json",
            Fields: "blanditiis",
            Key: "perferendis",
            OauthToken: "voluptas",
            PrettyPrint: true,
            QuotaUser: "facilis",
            UserIP: "explicabo",
        },
    }
    
    res, err := s.Inapppurchases.AndroidpublisherInapppurchasesGet(ctx, req)
    if err != nil {
        log.Fatal(err)
    }

    if res.Body != nil {
        // handle response
    }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### inapppurchases

* `AndroidpublisherInapppurchasesGet` - Checks the purchase and consumption status of an inapp item.

### purchases

* `AndroidpublisherPurchasesCancel` - Cancels a user's subscription purchase. The subscription remains valid until its expiration time.
* `AndroidpublisherPurchasesGet` - Checks whether a user's subscription purchase is valid and returns its expiry time.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
